# zege

./: .gitignore  Cargo.toml  LICENSE.md  learn.rs  readme.md
src/: main.rs
src/util/: db.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  layout.tsx
web/src/datarender/: CodeEditor.tsx  DataScreen.tsx  TableView.tsx
web/src/lib/: main.tsx  style.css
