[package]
name = "zege"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
sqlx = { version = "0.7.4", features = ["postgres", "mysql", "runtime-tokio-native-tls" ] }
tokio = { version = "1.37.0", features = ["full"] } 
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
dotenv = "0.15"
